# P2E

./: .gitignore  CHANGELOG.md  README.md  apex-verse.cabal  cabal.project  default.nix  hie.yaml  p2e.cabal  policy.plutus  shell.nix
.github/workflows/: test.yml
nix/: default.nix  sources.json
nix/pkgs/haskell/: haskell.nix
scripts/: README.md  cardano-node.sh  create-wallet.sh  env.sh  mint-token-cli.sh  query-key.sh  query-key1.sh  submit.sh  test
scripts/mainnet/: policy.plutus
scripts/testnet/: .gitignore  01.addr  01.skey  01.vkey  01.vkeyhash  policy.plutus  wallet.addr  wallet.skey  wallet.vkey
src/: Deploy.hs  P2E.hs
src/ApexVerse/: apex_verse.hs
test/: Spec.hs
test/Spec/: P2E.hs  policy.pir
